--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,13 +5,12 @@ edition = "2024"
 
 [dependencies]
 # General purpose executors + data structures
-tokio = {version = "1.28", features = ["full"] }
-serde = { version = "1.0", features = ["derive"] }
-toml = "0.7"
+tokio = { version = "1.28", features = ["full"] }
+serde = { version = "1.0",  features = ["derive"] }
+toml =  { version = "0.7"   }
+clap =  { version = "4.5",  features = ["derive"] }
 
 # Data-collection capabilities
-hw-crossplatform = "=0.1.28"
-sysinfo = "0.35"
 
 
 
@@ -21,5 +20,4 @@ opt-level = 3
 lto = true
 codegen-units = 1
 panic = "abort"
-target-cpu = "native"
 
