--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ toml =  { version = "0.7"   }
 clap =  { version = "4.5",  features = ["derive"] }
 
 # Data-collection capabilities
-
+network-interface = { version = "2.0.1" }
 
 
 [profile.release]
