--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,12 @@ tokio = { version = "1.28", features = ["full"] }
 serde = { version = "1.0",  features = ["derive"] }
 toml =  { version = "0.7"   }
 clap =  { version = "4.5",  features = ["derive"] }
+futures = { version = "0.3" }
 
 # Data-collection capabilities
 network-interface = { version = "2.0.1" }
 ipnet = { version = "2.11" }
+ping-rs = { version = "0.1" }
 
 
 [profile.release]
